pg_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cat-api-ns
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
